# actiDep

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  CONFIG_EXAMPLES.md  CONTRIBUTING.md  EXAMPLES.md  HCP_bundle_names.json  LICENSE  README.md  TESTING.md  analyse_sujets.py  clean_files.ipynb  copy_bundleseg_res.ipynb  count_files.ipynb  create_bundle_figure.py  create_bundleseg_structure.ipynb  get_bundleseg_list.ipynb  poubelle.py  pyproject.toml  requirements.txt  setup.py  subjects_no_confonds.txt
actiDep/: core.py  killme.sh  set_config.py
actiDep.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
analysis/: .~lock.aes_correlation_analysis.csv#  aes_regression_report.md  ami_regression_report.md  apathy_analysis_report.md  get_list_features.ipynb  global_analysis_report.md  group_analysis_report.md  mini_summary.ipynb  results_classif.html  results_regression.html
notebooks/: .~lock.outliers_to_review.xlsx#  actimetry_features_distrib.ipynb  best_visu.ipynb  check_bundleseg.ipynb  check_bundleseg.py  compare_autocalib.ipynb  control_qualite_sujets.txt  generate_visu_from_significant_results.ipynb  get_missing_info_summary.ipynb  outliers_to_review.xlsx  renaud_results.html  renaud_results.ipynb  show_03008.py  show_mdf_matrix.ipynb  tableau_resume.xlsx  track_update_folder.ipynb  traitement_CSTright.ipynb
report_output_old/: .~lock.summary_results.csv#  report.md
scripts/: HCP_multi_clustering_UMAP.py  HCP_multi_clustering_endpoints.py  HCP_multi_clustering_frechet.py  HCP_multi_clustering_mdf.py  HCP_multi_clustering_wavelet.py  acti_features_dashboard.py  (+16 more)
(+70 files in other folders)
