[tool.poetry]
name = "actiDep"
version = "0.1.0"
description = "Pipeline de traitement de la base Actidep"
authors = ["Votre Nom <votre.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"